--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.2",
         "yajra/laravel-datatables-oracle": "^10.2"
     },
     "require-dev": {
