--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "chart.js": "^4.0.1"
+        "chart.js": "^4.0.1",
+        "laravel-echo": "^1.14.2",
+        "pusher-js": "^7.5.0"
     }
 }
